--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>篮球打蔡徐坤</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <button>回到主页</button>
             </div>
             <div id="enddiv">
-                <p class="plantext">蔡徐坤 你的球掉了</p>
+                <p class="plantext">鸡 你不美了</p>
                 <p id="planscore">0</p>
                 <div><button onclick="jixu()">继续</button></div>
             </div>
