--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>篮球打蔡徐坤</title>
+    <title>鸡打蔡徐坤</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
