--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="enddiv">
                 <p class="plantext">鸡 你不美了</p>
                 <p id="planscore">0</p>
-		<a href="https://jq.qq.com/?_wv=1027&k=5NBBXbJ">加入修仙客栈</a>
+		<a href="https://jq.qq.com/?_wv=1027&k=5NBBXbJ" color="#000000" style="text-decoration:none">加入修仙客栈</a>
                 <div><button onclick="jixu()">继续</button></div>
             </div>
         </div>
