--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="contentdiv">
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
+            </br>
+            <p>bgm来自B站@鸡鸡·夫斯基</p>
+            <p>本项目改自GitHub@zeawinl</p>
         </div>
         <div id="maindiv">
             <div id="scorediv">
