--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <div id="contentdiv">
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
-            </br>
-            <p>bgm来自B站@鸡鸡·夫斯基</p>
-            <p>本项目改自GitHub@zeawinl</p>
         </div>
         <div id="maindiv">
             <div id="scorediv">
@@ -32,6 +29,10 @@
                 <div><button onclick="jixu()">继续</button></div>
             </div>
         </div>
+    </div>
+    <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
+        <p>BGM来自B站@鸡鸡·夫斯基&nbsp;本项目改自GitHub@zeawinl</p>
+        <p></p>
     </div>
 	<embed src="music/jntm.m4a" hidden="true" autostart="true" loop="true">
     <script src="js/jquery.js"></script>
