--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="contentdiv">
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
+            <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
+                <p>BGM来自B站@鸡鸡·夫斯基&nbsp;项目改自GitHub@zeawinl</p>
+                <p>技术支持@修仙客栈 风来</p>
+            </div>
         </div>
         <div id="maindiv">
             <div id="scorediv">
@@ -29,10 +33,6 @@
                 <div><button onclick="jixu()">继续</button></div>
             </div>
         </div>
-    </div>
-    <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
-        <p>BGM来自B站@鸡鸡·夫斯基&nbsp;本项目改自GitHub@zeawinl</p>
-        <p></p>
     </div>
 	<embed src="music/jntm.m4a" hidden="true" autostart="true" loop="true">
     <script src="js/jquery.js"></script>
