--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="contentdiv">
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
-            <div id="contentdiv" style="position:fixed; bottom:0px; left:0px; text-align:center;">
+            <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
                 <p>BGM来自B站@鸡鸡·夫斯基&nbsp;项目改自GitHub@zeawinl</p>
-                <br>
+                
                 <p>技术支持@修仙客栈 风来</p>
             </div>
         </div>
