--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>鸡打蔡徐坤</title>
     <link rel="stylesheet" href="css/main.css">
+    <style>
+	    #preload-01 { background: url(image\bullet1.png) no-repeat -9999px -9999px; }
+	    #preload-02 { background: url(image\enemy1_fly_1.png) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\enemy2_fly_1.png) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\enemy3_fly_1.png) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\本方飞机爆炸.gif) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\大飞机爆炸.gif) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\中飞机爆炸.gif) no-repeat -9999px -9999px; }
+	    #preload-03 { background: url(image\小飞机爆炸.gif) no-repeat -9999px -9999px; }
+    </style>
 </head>
 <body>
     <div id="contentdiv">
