--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 </head>
 <body>
     <div id="contentdiv">
+	<div>
+	    <p>为了游戏体验，请在BGM播放后再开始游戏</p>
+	</div>
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
             <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
                 <p>BGM来自B站@鸡鸡·夫斯基&nbsp;项目改自GitHub@zeawinl</p>
-                
-                <p>技术支持@修仙客栈 风来</p>
+                <p>技术支持@修仙客栈&nbsp;风来</p>
             </div>
         </div>
         <div id="maindiv">
