--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="contentdiv">
         <div id="startdiv">
-	    <p>为了游戏体验，请在BGM播放后再开始游戏</p>
+	    <p style="text-align:center;">为了游戏体验，请在BGM播放后再开始游戏</p>
             <button onclick="begin()">开始游戏</button>
             <div style="position:fixed; bottom:0px; left:0px; text-align:center;">
                 <p>BGM来自B站@鸡鸡·夫斯基&nbsp;项目改自GitHub@zeawinl</p>
